# injection-radar

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  injection-radar  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt
config/: config.example.yaml  config.yaml
data/: de-domains.csv  test_urls.csv
docker/: Dockerfile.orchestrator  Dockerfile.scraper  docker-compose.yml  init-db.sql
docs/: evaluation.md
src/: __init__.py
src/analysis/: __init__.py  detector.py
src/api/: __init__.py  main.py
src/cli/: __init__.py  debug_dashboard.py  interactive.py  main.py
src/core/: __init__.py  checkpoint.py  config.py  database.py  logging.py  models.py  queue.py  startup.py  validators.py
src/dashboard/: __init__.py  routes.py
src/dashboard/templates/: base.html  domains.html  history.html  index.html  scan.html
src/dashboard/templates/partials/: scan_result.html
src/llm/: __init__.py  anthropic.py  base.py  openai.py
src/mcp/: __init__.py  server.py
src/scheduler/: scheduler.py
src/scraper/: __init__.py  stealth.py  worker.py
tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_dashboard.py  test_dashboard_logic.py  test_detector.py  test_injection_page.html  test_models.py  test_queue.py  test_worker.py
